@@ -1,6 +1,11 @@
 devel
 -----
 
+* Use smarter default value preset in web UI for replication factor in case
+  there are constraints established for the replication factor by the
+  startup options `--cluster.min-replication-factor` and 
+  `--cluster.max-replication-factor`.
+
 * Updated arangosync to 0.7.6.
 
 * Make the reboot tracker catch a failed server and permanently removed
